Add zshrc to Dotbot config
Symlinking is now handled with Dotbot rather than manually

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,11 +4,10 @@
 
 - clean: ['~']
 
-#- link:
-#    ~/.dotfiles: '' remember I added this did not appear in the latest version of repo
-#    ~/.tmux.conf: tmux.conf
+- link:
 #    ~/.vim: vim
 #    ~/.vimrc: vimrc
+     ~/.zshrc: zshrc
 
 - create:
     - ~/Work
