--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,13 +5,13 @@
 - clean: ['~']
 
 - link:
-#    ~/.vim: vim
-#    ~/.vimrc: vimrc
-     ~/.zshrc: zshrc
+#    ~/.vim:
+#    ~/.vimrc:
+     ~/.zshrc:
+     ~/.gitconfig:
 
 - create:
     - ~/Work
-    - ~/hey/you/guys
 
 #- shell:
 #  - [git submodule update --init --recursive, Installing submodules]
