--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
 #    ~/.vim:
 #    ~/.vimrc:
      ~/.zshrc:
+     ~/.zshenv:
      ~/.gitconfig:
     #  may want to think about adding the whole config directory here
      ~/.config/bat:
